--- a/index.html
+++ b/index.html
@@ -1,23 +1,69 @@
-<html>  
-  <head>  
-  <title>视频直播</title>  
-  <meta charset="utf-8">  
-  <link href="http://vjs.zencdn.net/5.5.3/video-js.css" rel="stylesheet">  
-  <!-- If you'd like to support IE8 -->  
-  <script src="http://vjs.zencdn.net/ie8/1.1.1/videojs-ie8.min.js"></script>  
-</head>  
-<body>  
-  <h1>直播间</h1>  
- <video id="my-video" class="video-js" controls preload="auto" width="640" height="300"  
- poster="http://ppt.downhot.com/d/file/p/2014/08/12/9d92575b4962a981bd9af247ef142449.jpg" data-setup="{}">  
-    <source src="rtmp://live.hkstv.hk.lxdns.com/live/hks" type="rtmp/flv">  
-    <!-- 如果上面的rtmp流无法播放，就播放hls流 -->  
-    <!-- <source src="http://10.10.5.119/live/livestream.m3u8" type='application/x-mpegURL'>   -->
-    <p class="vjs-no-js">播放视频需要启用 JavaScript，推荐使用支持HTML5的浏览器访问。  
-      To view this video please enable JavaScript, and consider upgrading to a web browser that  
-      <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>  
-    </p>  
- </video>  
- <script src="http://vjs.zencdn.net/5.5.3/video.js"></script>  
-</body>  
+<html>
+
+<head>
+    <title>RTMP测试</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+    <script src="../static/RTMP/adminlte-2.3.6/plugins/jQuery/jquery-2.2.3.min.js"></script>
+    <link rel="stylesheet" href="../static/RTMP/adminlte-2.3.6/plugins/video-js-5.19.2/video-js.css"/>
+    <script src="../static/RTMP/adminlte-2.3.6/plugins/video-js-5.19.2/video.js"></script>
+</head>
+
+<body >
+
+<div class="wrapper">
+    <div class="content-wrapper">
+        <section class="content">
+            <div class="player-wrapper" style="margin:0 auto;width:80%;position:relative;">
+
+                <div class="video-wrapper" style="padding-bottom:55%;position:relative;margin:0 auto;">
+                    <div class="video-inner" style="position:absolute;top:0;bottom:0;left:0;right:0;">
+                        <video id="videojs" class="video-js vjs-default-skin vjs-big-play-centered" style="width: 50%; height: 50%;" controls preload="none"
+                               poster="" x5-video-player-fullscreen=”true”，x5-video-player-type=”h5”>
+                            <source src="rtmp://198.168.0.80:1935/hls/stream" type="rtmp/mp4"></source>
+                            <p class="vjs-no-js">
+                                To view this video please enable JavaScript, and consider upgrading to a web browser that
+                                <a href="http://videojs.com/html5-video-support/" target="_blank">
+                                    supports HTML5 video
+                                </a>
+                            </p>
+                        </video>
+                    </div>
+                </div>
+            </div>
+
+            <!-- wrapper-->
+            <script>
+                videojs.options.flash.swf = '../static/RTMP/adminlte-2.3.6/plugins/video-js-5.19.2/video-js-fixed.swf';
+                videojs.options.techOrder = ['html5','flash'];
+                var player = null;
+             
+                player = videojs("videojs",{
+                    notSupportedMessage : '您的浏览器没有安装或开启Flash,戳我开启！',
+                    techOrder : ["flash"],
+                    autoplay : true
+                });
+                player.on("error",function(e){
+                    var $e = $(".vjs-error .vjs-error-display .vjs-modal-dialog-content");
+                    var $a = $("<a href='http://www.adobe.com/go/getflashplayer' target='_blank'></a>").text($e.text());
+                    $e.empty().append($a);
+                });
+
+            </script>
+        </section>
+    </div>
+
+</div>
+<!-- wrapper-->
+</body>
+
 </html>
