--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 <video id="my-video" class="video-js vjs-default-skin vjs-big-play-centered"
        poster="test.jpg" width="800" height="600">
-    <source src='rtmp://live.hkstv.hk.lxdns.com/live/hks' type='rtmp/flv'/>
+    <source src='rtmp://58.200.131.2:1935/livetv/hunantv' type='rtmp/flv'/>
 </video>
 <script>
     var player = videojs('my-video');
