--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <video id="my-video" class="video-js vjs-default-skin vjs-big-play-centered"
        poster="test.jpg" width="800" height="600">
     <!-- <source src='rtmp://58.200.131.2:1935/livetv/hunantv' type='rtmp/flv'/> -->
-    <source src="http://10.10.5.119/live/livestream.m3u8" type='application/x-mpegURL'>
+    <source src="http://cr.stream.omc.hk/etv2sb/phd60/chunklist_w1170594935.m3u8" type='application/x-mpegURL'>
     <!-- <source src='rtmp://edge2.everyon.tv/etv2/_definst_/phd765' type='rtmp/flv'/> -->
 </video>
 <script>
