--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        poster="test.jpg" width="800" height="600">
     <!-- <source src='rtmp://58.200.131.2:1935/livetv/hunantv' type='rtmp/flv'/> -->
     <!-- <source src="http://cr.stream.omc.hk/etv2sb/phd60/chunklist_w1170594935.m3u8" type='application/x-mpegURL'> -->
-    <source src='rtmp://edge2.everyon.tv/etv2sb/phd60' type='rtmp/flv'/>
+    <source src='rtmp://1.234.77.36:1935/cgntv_ch/phone_ch' type='rtmp/flv'/>
 </video>
 <script>
     var player = videojs('my-video');
