--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
        poster="test.jpg" width="800" height="600">
     <!-- <source src='rtmp://58.200.131.2:1935/livetv/hunantv' type='rtmp/flv'/> -->
     <!-- <source src="http://edge2.everyon.tv/etv2sb/phd59/HasBahCa.m3u8" type='application/x-mpegURL'> -->
-    <source src='rtmp://202.69.69.180:443/webcast/bshdlive-pc' type='rtmp/flv'/>
+    <!-- <source src='rtmp://202.69.69.180:443/webcast/bshdlive-pc' type='rtmp/flv'/> -->
+    <source src='rtmp://149.3.141.210:1935/tv/ttv12' type='rtmp/flv'/>
 </video>
 <script>
     var player = videojs('my-video');
