--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <body>
 <video id="my-video" class="video-js vjs-default-skin vjs-big-play-centered"
        poster="test.jpg" width="800" height="600">
-    <!-- <source src='rtmp://58.200.131.2:1935/livetv/hunantv' type='rtmp/flv'/> -->
+    <source src='rtmp://58.200.131.2:1935/livetv/hunantv' type='rtmp/mp4'/>
     <!-- <source src='rtmp://202.69.69.180:443/webcast/bshdlive-pc' type='rtmp/flv'/> -->
-    <source src='rtmp://ivi.bupt.edu.cn:1935/livetv/chchd' type='rtmp/flv'/>
+    <!-- <source src='rtmp://live190.la3.origin.filmon.com:1935/live/244.high.stream' type='rtmp/flv'/> -->
     <!-- <source src="http://59.120.242.104:9000/live/live1.m3u8" type='application/x-mpegURL'> -->
 </video>
 <script>
