--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        poster="test.jpg" width="800" height="600">
     <!-- <source src='rtmp://58.200.131.2:1935/livetv/hunantv' type='rtmp/mp4'/> -->
     <!-- <source src='rtmp://202.69.69.180:443/webcast/bshdlive-pc' type='rtmp/flv'/> -->
-    <source src='rtmp://59.124.220.46:554/live/tv1.stream' type='rtmp/flv'/>
+    <source src='rtmp://203.207.99.19:1935/live/CCTV5' type='rtmp/flv'/>
     <!-- <source src="http://59.120.242.104:9000/live/live1.m3u8" type='application/x-mpegURL'> -->
 </video>
 <script>
